--- a/LaMiaPizzeriaRefactoring/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeriaRefactoring/Views/Shared/_Header.cshtml
@@ -15,7 +15,7 @@
 			<a href="@Url.Action("Index", "Pizza")">MENU</a>
 		</li>
 		<li>
-			<a href="@Url.Action("Index", "Gestore")">GESTORE</a>
+			<a href="@Url.Action("Create", "Pizza")">CREA</a>
 		</li>
 	</ul>
 </div>
