--- a/LaMiaPizzeriaRefactoring/Views/Pizza/Create.cshtml
+++ b/LaMiaPizzeriaRefactoring/Views/Pizza/Create.cshtml
@@ -5,8 +5,7 @@
 @model PizzaModel
 
 <div class="container">
-    <h2 class="mb-3">Aggiungi pizza</h2>
-    <form asp-controller="Pizza" asp-action="Create" method="post">
+    <form class="flex flex-col w-50 m-auto" asp-controller="Pizza" asp-action="Create" method="post">
         @Html.AntiForgeryToken()
         <div class="mb-3">
             <label asp-for="Name" class="form-label">Nome</label>
