Minor fixes and added booking function

--- a/LaMiaPizzeriaRefactoring/Views/Shared/_Footer.cshtml
+++ b/LaMiaPizzeriaRefactoring/Views/Shared/_Footer.cshtml
@@ -3,7 +3,7 @@
 		<div>
 			<a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Clicca qui per prenotare!</a>
 			<p>+39 392 321 52 52</p>
-			<p>Tutti i diritti riservati - Pizzeria Vesuvio</p>
+			<p>&copy; Tutti i diritti riservati - Pizzeria Vesuvio</p>
 		</div>
 		<img src="https://www.pizzeriavesuvio.it/wp-content/uploads/2021/09/Pizzeria-Vesuvio-logo.png" style="height: 92px;" />
 		<ul>
