--- a/LaMiaPizzeriaRefactoring/Views/Shared/_Header.cshtml
+++ b/LaMiaPizzeriaRefactoring/Views/Shared/_Header.cshtml
@@ -4,7 +4,7 @@
 			<a href="@Url.Action("Index", "Home")">HOME</a>
 		</li>
 		<li>
-			<a href="@Url.Action("AboutUs", "Home")">ABOUT US</a>
+			<a href="@Url.Action("Prenota", "Home")">PRENOTA</a>
 		</li>
 		<li>
 			<a href="@Url.Action("Index", "Home")">
