--- a/LaMiaPizzeriaRefactoring/Views/Pizza/Index.cshtml
+++ b/LaMiaPizzeriaRefactoring/Views/Pizza/Index.cshtml
@@ -19,8 +19,8 @@
                             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">@pizza.Name</h5>
                         </a>
                         <p class="mb-3 font-normal text-gray-700">@pizza.Description <br /><span class="text-lg">@pizza.Price &euro;</span></p>
-                        <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
-                            Read more
+                        <a href="@Url.Action("Details", "Pizza", new { id = pizza.Id })" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-redText rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300">
+                            Acquista
                             <svg aria-hidden="true" class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                         </a>
                     </div>
