--- a/LaMiaPizzeriaRefactoring/Views/Pizza/Update.cshtml
+++ b/LaMiaPizzeriaRefactoring/Views/Pizza/Update.cshtml
@@ -2,14 +2,14 @@
     Layout = "_LayoutNoFooter";
 }
 
-
 @model PizzaModel
 
 <div class="container">
-    <form class="flex flex-col w-50 m-auto" asp-controller="Pizza" asp-action="Create" method="post">
+    <h2 class="mb-3">Modifica dell'articolo</h2>
+    <form asp-controller="Article" asp-action="Update" asp-route-id="@Model.Id" method="post">
         @Html.AntiForgeryToken()
         <div class="mb-3">
-            <label asp-for="Name" class="form-label">Nome</label>
+            <label asp-for="Name" class="form-label">Nome pizza</label>
             <input asp-for="Name" type="text" class="form-control" required>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
